--- a/src/app/cadastro/cad-pessoa/cad-pessoa/cad-pessoa.html
+++ b/src/app/cadastro/cad-pessoa/cad-pessoa/cad-pessoa.html
@@ -14,14 +14,17 @@
       (click)="switchTab('interesse')">
       <p class="text-gray-900 mb-0">Perfil Interesse</p>
     </button>
+    <button
+      [class.active]="activeTab === 'economico'"
+      (click)="switchTab('economico')">
+      <p class="text-gray-900 mb-0">Perfil Economico</p>
+    </button>
   </div>
 
 <div class="tabs-content">
-
-    @if (activeTab === 'pessoal') {
-      <div class="tab-pane">
-
-    <form [formGroup]="pessoaForm" (ngSubmit)="onSubmit()" >
+ <form [formGroup]="pessoaForm" (ngSubmit)="onSubmit()" >
+   @if (activeTab === 'pessoal') {
+   <div class="tab-pane">
 
       <fieldset class="mb-8">
         <legend class="text-lg font-semibold text-indigo-700 border-b border-indigo-200 w-full pb-2 mb-6">Dados de contato</legend>
@@ -105,9 +108,6 @@
             <div class="md:col-span-2">
               <h3 class="text-lg font-semibold text-green-800">Dados Empresariais</h3>
             </div>
-
-
-
             <div>
               <label for="nr_cnpj" class="block text-sm font-medium text-gray-700">CNPJ <span class="text-red-500">*</span></label>
               <input id="nr_cnpj" type="text" formControlName="nr_cnpj"  inputmode="numeric" mask="00.000.000/0000-00" placeholder="00.000.000/0000-00"
@@ -126,10 +126,6 @@
                         {{ mensagemDeErro }}
                 </div>
             </div>
-
-
-
-
             <div>
               <label for="nmFantasia" class="block text-sm font-medium text-gray-700">Nome Fantasia <span class="text-red-500">*</span></label>
               <input id="nmFantasia" type="text" formControlName="nmFantasia" placeholder="Nome Fantasia"
@@ -138,7 +134,6 @@
               >
               <p *ngIf="pessoaForm.get('nmFantasia')?.errors?.['required'] && isInvalid('nmFantasia')" class="mt-1 text-xs text-red-600">A Razão Social é obrigatória.</p>
             </div>
-
             <div class="md:col-span-2">
               <label for="rzSocial" class="block text-sm font-medium text-gray-700">Razão Social <span class="text-red-500">*</span></label>
               <input id="rzSocial" type="text" formControlName="rzSocial" placeholder="Razão Social"
@@ -152,56 +147,48 @@
               <div class="md:col-span-2"></div>
           </div>
         </fieldset>
-
-<fieldset>
-  <div class="md:col-span-2">
-    <legend class="text-lg font-semibold text-indigo-700 border-b border-indigo-200 w-full pb-2 mb-6">
-      Contato (Celular, WhatsApp, Email)
-    </legend>
-  </div>
-
-  <!-- Grid responsivo -->
-  <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-4">
-
-    <!-- Celular -->
-    <div>
-      <label for="celular" class="block text-sm font-medium text-gray-700">Celular <span class="text-red-500">*</span></label>
-      <input id="celular"
-             type="text"
-             mask="(00) 0 0000-0000"
-             formControlName="celular"
-             placeholder="Celular"
-             class="mt-1 block w-full rounded-md shadow-sm p-2 border rounded-md shadow-sm focus:outline-none focus:border-blue-500 text-gray-900"
-             [ngClass]="{'border-red-500': isInvalid('celular'), 'border-gray-300': !isInvalid('celular')}" />
-      <p *ngIf="pessoaForm.get('celular')?.errors?.['required'] && isInvalid('celular')"
-         class="mt-1 text-xs text-red-600">
-        O número celular é obrigatório.
-      </p>
-    </div>
-
-    <!-- WhatsApp -->
-    <div>
-      <label for="zap" class="block text-sm font-medium text-gray-700">WhatsApp</label>
-      <input id="zap"
-             type="checkbox"
-             formControlName="zap"
-             class="w-6 h-6 mt-2 hover:bg-gray-300 focus:ring-green-500" />
-    </div>
-
-    <!-- Email -->
-    <div class="md:col-span-2 lg:col-span-2">
-      <label for="email" class="block text-sm font-medium text-gray-700">Email</label>
-      <input id="email"
-             type="text"
-             formControlName="email"
-             placeholder="Email"
-             class="mt-1 block w-full w-80   text-sm md:text-gray-400 border border-slate-200 rounded-md pl-2 py-3 transition duration-300 ease focus:outline-none focus:border-blue-500 hover:border-slate-300 shadow-sm focus:shadow" />
-    </div>
-
-  </div>
-</fieldset>
-
-
+        <fieldset>
+        <div class="md:col-span-2">
+          <legend class="text-lg font-semibold text-indigo-700 border-b border-indigo-200 w-full pb-2 mb-6">
+            Contato (Celular, WhatsApp, Email)
+          </legend>
+        </div>
+        <!-- Grid responsivo -->
+        <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-4">
+          <!-- Celular -->
+          <div>
+            <label for="celular" class="block text-sm font-medium text-gray-700">Celular <span class="text-red-500">*</span></label>
+            <input id="celular"
+                  type="text"
+                  mask="(00) 0 0000-0000"
+                  formControlName="celular"
+                  placeholder="Celular"
+                  class="mt-1 block w-full rounded-md shadow-sm p-2 border rounded-md shadow-sm focus:outline-none focus:border-blue-500 text-gray-900"
+                  [ngClass]="{'border-red-500': isInvalid('celular'), 'border-gray-300': !isInvalid('celular')}" />
+            <p *ngIf="pessoaForm.get('celular')?.errors?.['required'] && isInvalid('celular')"
+              class="mt-1 text-xs text-red-600">
+              O número celular é obrigatório.
+            </p>
+          </div>
+        <!-- WhatsApp -->
+          <div>
+            <label for="zap" class="block text-sm font-medium text-gray-700">WhatsApp</label>
+            <input id="zap"
+                  type="checkbox"
+                  formControlName="zap"
+                  class="w-6 h-6 mt-2 hover:bg-gray-300 focus:ring-green-500" />
+          </div>
+        <!-- Email -->
+          <div class="md:col-span-2 lg:col-span-2">
+            <label for="email" class="block text-sm font-medium text-gray-700">Email</label>
+            <input id="email"
+                  type="text"
+                  formControlName="email"
+                  placeholder="Email"
+                  class="mt-1 block w-full w-80   text-sm md:text-gray-400 border border-slate-200 rounded-md pl-2 py-3 transition duration-300 ease focus:outline-none focus:border-blue-500 hover:border-slate-300 shadow-sm focus:shadow" />
+          </div>
+        </div>
+      </fieldset>
        <fieldset>
        <br>
        <div formGroupName="endereco" class="grid grid-cols-1 md:grid-cols-4 gap-1">
@@ -271,9 +258,6 @@
 
               >
           </div>
-
-
-
           <div class="md:col-span-2">
             <div>
               <label for="bairro" class="block text-sm font-medium text-gray-700">Bairro</label>
@@ -311,74 +295,68 @@
         <div class="flex justify-end">
           <button class="primary" (click)="switchTab('interesse')">Próximo</button>
         </div>
-    </form>
-  </div>
 
+   </div>
   }
 
-  <!--Perfoç de interesse -->
-
-   @if (activeTab === 'interesse') {
+  <!--Perfil de interesse -->
+<div formGroupName="interesse">
+  @if (activeTab === 'interesse') {
     <div class="tab-pane">
-      <form [formGroup]="pessoaForm">
+
        <fieldset class="mb-8 ">
           <legend class="text-lg font-semibold text-indigo-700 border-b border-indigo-200 w-full pb-2 mb-6">Dados Imóvel</legend>
           <div class="flex flex-col sm:flex-row sm:space-x-4">
-
-
             <section class=" w-full space-y-5">
               <!-- Título -->
               <div>
                 <label class="block text-sm font-medium text-gray-700 mb-2">Título <span class="text-red-500">*</span></label>
-                <input type="text" class="mt-1 block w-full placeholder:text-slate-400 border  border-slate-200  rounded-md shadow-sm p-2 focus:ring-blue-500 focus:border-blue-500 text-gray-900 focus:outline-none "
+                <input type="text"  class="mt-1 block w-full placeholder:text-slate-400 border  border-slate-200  rounded-md shadow-sm p-2 focus:ring-blue-500 focus:border-blue-500 text-gray-900 focus:outline-none "
                       [class.border-red-500]="pessoaForm.get('titulo')?.invalid && pessoaForm.get('titulo')?.touched"
-                      formControlName="titulo" placeholder="Ex: Casa com quintal amplo" />
+                      formControlName="tituloImovel" placeholder="Ex: Casa com quintal amplo" />
               </div>
-
-
-
               <!-- Tipo e preço -->
               <div class="flex items-center grid grid-cols-1 md:grid-cols-4 gap-4 ">
                 <div >
                   <label class="block text-sm font-medium mb-1 text-gray-700 ">Tipo Imóvel<span class="text-red-500">*</span></label>
-                  <select id="tipo_imovel" class="mt-1 block w-full placeholder:text-slate-400 border  border-slate-200  rounded-md shadow-sm p-2 focus:ring-blue-500 focus:border-blue-500  text-gray-900 focus:outline-none "
-                  formControlName="tipo">
-                    <option [ngValue]="null">Selecione o Tipo</option>
-                    <option *ngFor="let tipo_imovel of tiposDeImovel" [value]="tipo_imovel.id">
-                            {{ tipo_imovel.tipo_imovel }}
+                  <select id="tipoImovel"  class="mt-1 block w-full placeholder:text-slate-400 border  border-slate-200  rounded-md shadow-sm p-2 focus:ring-blue-500 focus:border-blue-500  text-gray-900 focus:outline-none "
+                  formControlName="tipoImovel">
+                    <option [ngValue]="null" disabled selected>Selecione o Tipo</option>
+                    <option *ngFor="let tipoImovel of tiposDeImovel" [ngValue]="tipoImovel.id">
+                            {{ tipoImovel.tipo_imovel }}
                     </option>
                   </select>
                 </div>
                 <div >
                   <label class="block text-sm font-medium mb-1 text-gray-700 ">Situação do Imóvel<span class="text-red-500">*</span></label>
-                  <select id="tipo_imovel" class="mt-1 block w-full placeholder:text-slate-400 border  border-slate-200  rounded-md shadow-sm p-2 focus:ring-blue-500 focus:border-blue-500  text-gray-900 focus:outline-none "
-                  formControlName="tipo">
-                    <option [ngValue]="null">Selecione a Situação</option>
-                    <option *ngFor="let tipo_imovel of tiposDeImovel" [value]="tipo_imovel.id">
-                            {{ tipo_imovel.tipo_imovel }}
+                  <select id="situacao_imovel" class="mt-1 w-full block  placeholder:text-slate-400 border  border-slate-200  rounded-md shadow-sm p-2 focus:ring-blue-500 focus:border-blue-500  text-gray-900 focus:outline-none "
+                  formControlName="situacao">
+                    <option [ngValue]="null" disabled selected>Selecione a Situação</option>
+                    <option *ngFor="let situacaoImovel of situacaoImovel" [value]="situacaoImovel.id">
+                            {{ situacaoImovel.nm_situacao }}
                     </option>
+
                   </select>
                 </div>
               </div>
-
               <div class="grid grid-cols-1 md:grid-cols-4 gap-4">
                 <div>
                   <label class="block text-sm font-medium mb-1">Valor de Venda </label>
                   <input id="vlr_venda" type="text" class="mt-1 block w-full placeholder:text-slate-400 border  border-slate-200  rounded-md shadow-sm p-2 focus:ring-blue-500 focus:border-blue-500 text-gray-900 focus:outline-none "
                     placeholder="Valor"
                     formControlName="vlr_venda"
-                    (blur)="formatarValor('vlr_venda')"
+                    (blur)="formatarValor('interesse.vlr_venda')"
                     />
                 </div>
                 <div>
                   <label class="block text-sm font-medium mb-1">Valor de Locação </label>
                   <input id="vlr_aluguel" type="text" class="mt-1 block w-full placeholder:text-slate-400 border  border-slate-200  rounded-md shadow-sm p-2 focus:ring-blue-500 focus:border-blue-500 text-gray-900 focus:outline-none "
-                  placeholder="Valor"
-                  formControlName="vlr_aluguel"
-                  (blur)="formatarValor('vlr_aluguel')"
+                    placeholder="Valor"
+                    formControlName="vlr_aluguel"
+                    (blur)="formatarValor('interesse.vlr_aluguel')"
                   />
-                </div>
 
+                </div>
                 <div>
                   <label class="block text-sm font-medium mb-1">Dormitórios<span class="text-red-500">*</span></label>
                   <input  id="qtde_dorms" class="mt-1  w-full placeholder:text-slate-400 border  border-slate-200  rounded-md shadow-sm p-2 focus:ring-blue-500 focus:border-blue-500 text-gray-900 focus:outline-none"
@@ -459,7 +437,7 @@
                       <label for="mobiliado" class="text-sm font-medium text-gray-700">Mobiliado</label>
                   </div>
                 <div class="flex items-center gap-2">
-                      <input id="varanda"  type="checkbox" id="varanda"  class="h-4 w-4 text-blue-600 border-gray-300 rounded focus:ring-blue-500" formControlName="varanda" min="0" />
+                      <input id="varanda"  formControlName="varanda"  type="checkbox" id="varanda"  class="h-4 w-4 text-blue-600 border-gray-300 rounded focus:ring-blue-500"  min="0" />
                       <label class="text-sm font-medium text-gray-700">Varanda</label>
                   </div>
 
@@ -473,16 +451,83 @@
                 <label class="block text-sm font-medium text-gray-700 mb-2">Observações <span class="text-red-500">*</span></label>
                 <input type="text" class="mt-1 block w-full placeholder:text-slate-400 border  border-slate-200  rounded-md shadow-sm p-2 focus:ring-blue-500 focus:border-blue-500 text-gray-900 focus:outline-none "
                       [class.border-red-500]="pessoaForm.get('titulo')?.invalid && pessoaForm.get('titulo')?.touched"
-                      formControlName="titulo" placeholder="Ex: Proprietario não aceita pet" />
+                      formControlName="obsPessoa" placeholder="Ex: Proprietario não aceita pet" />
               </div>
             </section>
-
        </div>
       </fieldset>
-     </form>
 
         <div class="actions">
-          <button class="secondary" (click)="switchTab('pessoal')">Voltar</button>
+        <button class="secondary" (click)="switchTab('pessoal')">Voltar</button>
+
+        <div class="flex justify-end">
+
+          <button class="primary" (click)="switchTab('economico')">Próximo</button>
+        </div>
+    </div>
+
+      <div class="mt-10 flex justify-end"> </div>
+
+    </div>
+   }
+  </div>
+   <!-- Perfil Economico-->
+   @if (activeTab === 'economico') {
+    <div class="tab-pane">
+
+      <fieldset class="mb-8">
+        <legend class="text-lg font-semibold text-indigo-700 border-b border-indigo-200 w-full pb-2 mb-6">Dados Economicos</legend>
+
+          <div>
+            <label for="celular" class="block text-sm font-medium text-gray-700">Renda Comprovada <span class="text-red-500">*</span></label>
+            <input id="celular"
+                  type="text"
+                  mask="(00) 0 0000-0000"
+                  formControlName="celular"
+                  placeholder="Renda "
+                  class="mt-1 block w-full rounded-md shadow-sm p-2 border rounded-md shadow-sm focus:outline-none focus:border-blue-500 text-gray-900"
+                  [ngClass]="{'border-red-500': isInvalid('celular'), 'border-gray-300': !isInvalid('celular')}" />
+            <p *ngIf="pessoaForm.get('celular')?.errors?.['required'] && isInvalid('celular')"
+              class="mt-1 text-xs text-red-600">
+              informe a renda.
+            </p>
+          </div>
+         <div class="md:col-span-2 lg:col-span-2">
+            <label for="email" class="block text-sm font-medium text-gray-700">Saldo FGTS atual</label>
+            <input id="email"
+                  type="text"
+                  formControlName="FGTS"
+                  placeholder="Email"
+                  class="mt-1 block w-full w-80   text-sm md:text-gray-400 border border-slate-200 rounded-md pl-2 py-3 transition duration-300 ease focus:outline-none focus:border-blue-500 hover:border-slate-300 shadow-sm focus:shadow" />
+          </div>
+          <div class="md:col-span-2 lg:col-span-2">
+            <label for="email" class="block text-sm font-medium text-gray-700">Recursos próprios</label>
+            <input id="email"
+                  type="text"
+                  formControlName="Recursos"
+                  placeholder="Email"
+                  class="mt-1 block w-full w-80   text-sm md:text-gray-400 border border-slate-200 rounded-md pl-2 py-3 transition duration-300 ease focus:outline-none focus:border-blue-500 hover:border-slate-300 shadow-sm focus:shadow" />
+          </div>
+            <div class="md:col-span-2 lg:col-span-2">
+            <label for="email" class="block text-sm font-medium text-gray-700">Renda Declarada no IR</label>
+            <input id="email"
+                  type="text"
+                  formControlName="email"
+                  placeholder="Email"
+                  class="mt-1 block w-full w-80   text-sm md:text-gray-400 border border-slate-200 rounded-md pl-2 py-3 transition duration-300 ease focus:outline-none focus:border-blue-500 hover:border-slate-300 shadow-sm focus:shadow" />
+          </div>
+            <div class="md:col-span-2 lg:col-span-2">
+            <label for="email" class="block text-sm font-medium text-gray-700">Origem Renda</label>
+            <input id="email"
+                  type="text"
+                  formControlName="email"
+                  placeholder="Email"
+                  class="mt-1 block w-full w-80   text-sm md:text-gray-400 border border-slate-200 rounded-md pl-2 py-3 transition duration-300 ease focus:outline-none focus:border-blue-500 hover:border-slate-300 shadow-sm focus:shadow" />
+          </div>
+
+      </fieldset>
+        <div class="actions">
+          <button class="secondary" (click)="switchTab('interesse')">Voltar</button>
             <button type="submit"
               [disabled]="pessoaForm.invalid"
               class="primary bg-blue-700 text-white px-4 py-2 rounded"
@@ -492,12 +537,12 @@
               }"
             >
               Finalizar Cadastro
-            </button>
-      </div>
-      <div class="mt-10 flex justify-end"> </div>
-
+         </button>
     </div>
-   }
+
+   </div>
+  }
+    </form>
   </div>
  </div>
 </div>
