--- a/src/app/cadastro/cad-pessoa/cad-pessoa/cad-pessoa.scss
+++ b/src/app/cadastro/cad-pessoa/cad-pessoa/cad-pessoa.scss
@@ -57,28 +57,28 @@ h2 {
 
 .tabs-header button {
   flex: 1;
-  padding: 15px;
+  padding: 2px;
   border: none;
-  background: #e0e0e0;
+  background: #f8f8f9;
   cursor: pointer;
-  font-weight: bold;
-  transition: background 0.3s;
+  font-weight: 400;
+  transition: background 1.3s;
 }
 
 .tabs-header button:hover {
-  background: #d0d0d0;
+  background: #d0dff8;
 }
 
 /* Classe dinâmica adicionada pelo Angular */
 .tabs-header button.active {
-  background: white;
-  border-bottom: 3px solid #007bff;
-  color: #007bff;
+  background: #ffffff;
+  border-bottom: 2px solid #0f62bf;
+  color: #0f253b;
 }
 
 /* Conteúdo */
 .tabs-content {
-  padding: 20px;
+  padding: 10px;
 }
 
 .tab-pane {
@@ -100,4 +100,4 @@ input {
 }
 
 button.primary { background-color: #007bff; color: white; border: none; padding: 10px 20px; border-radius: 4px; cursor: pointer; }
-button.secondary { background-color: #6c757d; color: white; border: none; padding: 10px 20px; border-radius: 4px; cursor: pointer; }
+button.secondary { background-color: #8b939b; color: white; border: none; padding: 10px 20px; border-radius: 4px; cursor: pointer; }
