--- a/src/app/cadastro/cad-imovel/cd-imovel/cad-imovel.html
+++ b/src/app/cadastro/cad-imovel/cd-imovel/cad-imovel.html
@@ -1,5 +1,5 @@
 
-<div  class="bg-gray-100 flex items-center justify-center min-h-screen p-6 sm:p-6 lg:p-6">
+<div  class="flex items-center justify-center  p-6 sm:p-6 lg:p-6">
   <div class="w-full max-w-4x2 mx-auto bg-white p-5 rounded-2xl shadow-lg">
     <h2 class="text-2xl font-bold text-gray-800 mb-2">Cadastro de Novos imóveis</h2>
     <p class="text-gray-600 mb-8">Preencha os campos abaixo para registrar novo imóvel.</p>
