--- a/src/app/cadastro/cad-pessoa/cad-pessoa/cad-pessoa.html
+++ b/src/app/cadastro/cad-pessoa/cad-pessoa/cad-pessoa.html
@@ -1,4 +1,4 @@
-<div class="bg-gray-100 flex items-center justify-center min-h-screen p-6 sm:p-6 lg:p-6">
+<div class="flex items-center justify-center min-h-screen p-1 sm:p-1 lg:p-2">
   <div class="w-full max-w-4x2 mx-auto bg-white p-5 rounded-2xl shadow-lg">
     <h2 class="text-2xl font-bold text-gray-800 mb-2">Cadastro de Novas Pessoas</h2>
     <p class="text-gray-600 mb-8">Preencha os campos abaixo para registrar uma nova pessoa.</p>
@@ -473,7 +473,7 @@
   </div>
    <!-- Perfil Economico-->
    @if (activeTab === 'economico') {
-    <div class="tab-pane">
+    <div class="tab-pane p-1 sm:p-10 lg:p-32">
 
       <fieldset class="mb-8">
         <legend class="text-lg font-semibold text-indigo-700 border-b border-indigo-200 w-full pb-2 mb-6">Dados Economicos</legend>
