--- a/src/app/template/layout/layout.html
+++ b/src/app/template/layout/layout.html
@@ -1,12 +1,12 @@
-<div class="flex flex-col h-screen bg-gray-100">
+<div class="flex flex-col h-screen bg-gray-100 ">
 
 
-  <div class="flex flex-1 overflow-hidden">
+  <div class="flex flex-1 overflow-hidden ">
     <aside
-      class="bg-gray-800 text-white shadow-lg transition-all duration-300 ease-in-out h-full flex-shrink-0"
+      class="bg-gray-800 text-white shadow-lg transition-all duration-300 ease-in-out h-full flex-shrink-0 flex flex-col"
       [ngClass]="{
-        'w-64': !isSidebarCollapsed,
-        'w-20': isSidebarCollapsed
+        'w-60': !isSidebarCollapsed,
+        'w-15': isSidebarCollapsed
       }"
     >
         <div class="p-4 flex justify-between items-center h-16">
@@ -16,14 +16,14 @@
             </h1>
             <button (click)="toggleSidebar()" class="text-white hover:text-gray-300 focus:outline-none">
                 <svg [ngClass]="{'rotate-180': isSidebarCollapsed}"
-                    class="w-6 h-6 transition-transform duration-300"
+                    class="w-4 h-4 transition-transform duration-300"
                     fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M11 19l-7-7 7-7m8 14l-7-7 7-7"></path>
                 </svg>
             </button>
         </div>
 
-<nav class="mt-4">
+      <nav class="mt-4 flex-1">
         <ng-container *ngFor="let item of menuItems">
 
             <button
@@ -44,7 +44,7 @@
                 >
                     {{ item.title }}
                 </span>
-
+<!--colapse -->
                 <span
                     *ngIf="!isSidebarCollapsed"
                     class="ml-auto transition-transform duration-300"
@@ -53,7 +53,7 @@
                     <svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7"></path></svg>
                 </span>
             </button>
-
+<!--menu Imoveis -->
             <a
                 *ngIf="!item.isSubMenu"
                 [routerLink]="item.link"
@@ -72,11 +72,9 @@
                 </span>
             </a>
 
-
+<!--menu Clientes -->
             <div
-                *ngIf="item.isSubMenu && item.expanded"
-                class="bg-gray-900 overflow-hidden"
-                >
+                *ngIf="item.isSubMenu && item.expanded"  class="bg-gray-900 overflow-hidden">
                 <a
                     *ngFor="let child of item.children"
                     [routerLink]="child.link"
@@ -85,44 +83,52 @@
                         class="transition-opacity duration-300"
                         [ngClass]="{'opacity-0 hidden': isSidebarCollapsed, 'opacity-100': !isSidebarCollapsed}"
                     >
-                        {{ child.title }}
+                        {{child.title }}
                     </span>
                 </a>
             </div>
 
+
+
         </ng-container>
-    </nav>
 
+     </nav>
 
-        <div class="p-4 border-t border-gray-700 text-xs text-gray-400">
-            © 2025 Todos os Direitos Reservados
+  <div class="p-4 border-t border-gray-700 text-xs text-gray-400 flex-shrink-0 ">
+                 <li><button  (click)="executeAction()">Sair</button></li>
         </div>
+     <div class="p-4 border-t border-gray-700 text-xs text-gray-400 flex-shrink-0">
+        © 2025 Todos os Direitos Reservados
+    </div>
         </aside>
 
-       <main class="flex-1  overflow-y-auto">
+       <main class="flex-1  overflow-y-auto ">
 
-  <header class="bg-white shadow-md h-20 flex items-center justify-between px-6 **fixed top-0 left-0 right-0 z-20**">
-     <div></div>
-    <div class="flex items-center space-x-6">
+          <header class="bg-white shadow-md h-20 flex items-center justify-between px-6 **fixed top-0 left-0 right-0 z-20** ">
+            <div></div>
+            <div class="flex items-center space-x-6">
 
-      <button class="relative p-2 text-gray-500 hover:text-gray-700 transition-colors duration-200 focus:outline-none">
-        <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 17h5l-1.405-1.405A2.032 2.032 0 0118 14.158V11a6.002 6.002 0 00-4-5.659V5a2 2 0 10-4 0v.341C7.67 6.165 6 8.388 6 11v3.159c0 .538-.214 1.055-.595 1.436L4 17h5m6 0v1a3 3 0 11-6 0v-1m6 0H9"></path></svg>
+              <button class="relative p-2 text-gray-500 hover:text-gray-700 transition-colors duration-200 focus:outline-none">
+                <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 17h5l-1.405-1.405A2.032 2.032 0 0118 14.158V11a6.002 6.002 0 00-4-5.659V5a2 2 0 10-4 0v.341C7.67 6.165 6 8.388 6 11v3.159c0 .538-.214 1.055-.595 1.436L4 17h5m6 0v1a3 3 0 11-6 0v-1m6 0H9"></path></svg>
 
-        <span class="absolute top-0 right-0 inline-flex items-center justify-center px-2 py-1 text-xs font-bold leading-none text-red-100 transform translate-x-1/2 -translate-y-1/2 bg-red-600 rounded-full">
-          3
-        </span>
-      </button>
+                <span class="absolute top-0 right-0 inline-flex items-center justify-center px-2 py-1 text-xs font-bold leading-none text-red-100 transform translate-x-1/2 -translate-y-1/2 bg-red-600 rounded-full">
+                  3
+                </span>
+              </button>
 
-      <button class="flex items-center space-x-2 p-2 rounded-full hover:bg-gray-100 transition-colors duration-200">
-        <svg class="w-8 h-8 text-gray-500" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5.121 17.804A13.937 13.937 0 0112 16c2.5 0 4.847.655 6.879 1.804M15 10a3 3 0 11-6 0 3 3 0 016 0zm6 0a9 9 0 11-18 0 9 9 0 0118 0z"></path></svg>
+              <button class="flex items-center space-x-2 p-2 rounded-full hover:bg-gray-100 transition-colors duration-200">
+                <svg class="w-8 h-8 text-gray-500" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5.121 17.804A13.937 13.937 0 0112 16c2.5 0 4.847.655 6.879 1.804M15 10a3 3 0 11-6 0 3 3 0 016 0zm6 0a9 9 0 11-18 0 9 9 0 0118 0z"></path></svg>
 
-        <span class="text-sm font-medium hidden sm:inline">
-          Olá, Usuário
-        </span>
-      </button>
+                <span  *ngIf="usuarioLogado" class="text-sm font-medium hidden sm:inline">
+                Olá, {{usuarioLogado }}
+                </span>
+              </button>
 
-    </div>
-  </header>
+
+
+
+            </div>
+          </header>
            <router-outlet></router-outlet>
       </main>
 
