--- a/src/app/cadastro/cad-imovel/cd-imovel/cad-imovel.html
+++ b/src/app/cadastro/cad-imovel/cd-imovel/cad-imovel.html
@@ -23,7 +23,7 @@
     @if (activeTab === 'pessoal') {
       <div class="tab-pane">
        <form [formGroup]="imovelForm">
-
+<p>O formulário está inválido? {{ imovelForm.invalid ? 'SIM' : 'NÃO' }}</p>
           <legend class="text-lg font-semibold text-indigo-700 border-b border-indigo-200 w-full pb-2 mb-4">Contato</legend>
 
           <section class="bg-white shadow-sm rounded-lg w-full p-0 space-y-6" >
@@ -245,7 +245,7 @@
              formControlName="tipo">
               <option [ngValue]="null">Selecione o Tipo</option>
               <option *ngFor="let tipo_imovel of tiposDeImovel" [value]="tipo_imovel.id">
-                      {{ tipo_imovel.tipo_imovel }}
+                      {{ tipo_imovel.ds_imovel }}
               </option>
             </select>
           </div>
@@ -255,7 +255,7 @@
              formControlName="tipo">
               <option [ngValue]="null">Selecione a Situação</option>
               <option *ngFor="let tipo_imovel of tiposDeImovel" [value]="tipo_imovel.id">
-                      {{ tipo_imovel.tipo_imovel }}
+                      {{ tipo_imovel.ds_imovel }}
               </option>
             </select>
           </div>
