--- a/src/app/template/layout/layout.html
+++ b/src/app/template/layout/layout.html
@@ -129,7 +129,9 @@
 
             </div>
           </header>
-           <router-outlet></router-outlet>
+          <div class="flex-1 overflow-y-auto pt-1">
+    <router-outlet></router-outlet>
+  </div>
       </main>
 
   </div>
