--- a/src/app/menuconsultar/menuconsultar/menuconsultar.html
+++ b/src/app/menuconsultar/menuconsultar/menuconsultar.html
@@ -9,7 +9,9 @@
     <nav class="rounded-lg border shadow-lg overflow-hidden p-2 bg-gradient-to-r from-blue-500 to-blue-700 text-white border-slate-200 shadow-slate-950/5 sticky top-0 mx-auto w-full max-w-screen-xl">
       <button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">Contrato de Locação</button>
         <button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">imóvel</button>
-      <button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">Pessoa</button>
+        <a  routerLink="pessoas">
+            <button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">+Pessoas</button>
+        </a>
        <button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">Resumo</button>
 
 
