--- a/src/app/cadastro/cad-pessoa/cad-pessoa/cad-pessoa.html
+++ b/src/app/cadastro/cad-pessoa/cad-pessoa/cad-pessoa.html
@@ -4,26 +4,21 @@
     <p class="text-gray-600 mb-8">Preencha os campos abaixo para registrar uma nova pessoa.</p>
 
   <div class="tabs-header pt-0  pt-0  pr-50">
- <button
-      [class.active]="activeTab === 'pessoal'"
-      (click)="switchTab('pessoal')">
+    <button type="button" [class.active]="activeTab === 'pessoal'" (click)="switchTab('pessoal')">
       <p class="text-gray-900 mb-1">Dados Cadastrais</p>
-    </button>
-    <button
-      [class.active]="activeTab !== 'interesse'"
-      (click)="switchTab('interesse')">
-      <p class="text-gray-900 mb-0">Perfil Interesse</p>
-    </button>
-    <button
-      [class.active]="activeTab === 'economico'"
-      (click)="switchTab('economico')">
-      <p class="text-gray-900 mb-0">Perfil Economico</p>
-    </button>
-  </div>
+        </button>
+    <button type="button" [class.active]="activeTab === 'interesse'" (click)="switchTab('interesse')">
+        <p class="text-gray-900 mb-0">Perfil Interesse</p>
+      </button>
+      <button type="button" [class.active]="activeTab === 'economico'" (click)="switchTab('economico')">
+        <p class="text-gray-900 mb-0">Perfil Econômico</p>
+      </button>
+    </div>
 
 <div class="tabs-content ">
  <form [formGroup]="pessoaForm"  >
-<!-- <pre>Status do Formulário: {{ pessoaForm.status }}</pre>
+  <!--
+ <pre>Status do Formulário: {{ pessoaForm.status }}</pre>
   <pre>Erros CPF: {{ pessoaForm.get('nr_cpf')?.errors | json }}</pre>
   <pre>Erros CNPJ: {{ pessoaForm.get('nr_cnpj')?.errors | json }}</pre>
 
@@ -33,12 +28,13 @@
   <ul>
     <li *ngFor="let control of pessoaForm.controls | keyvalue">
       <span *ngIf="control.value.invalid">{{ control.key }}</span>
+
     </li>
   </ul>
 </div>
 -->
-   @if (activeTab === 'pessoal') {
-   <div class="tab-pane pt-0  pr-50">
+
+   <div [class.hidden]="activeTab !== 'pessoal'" class="tab-pane pt-0  pr-50">
 
       <fieldset class="mb-8 ">
         <legend class="text-lg font-semibold text-indigo-700 border-b border-indigo-200 w-full pb-2 mb-6">Dados de contato</legend>
@@ -195,12 +191,16 @@
                   mask="(00) 0 0000-0000"
                   formControlName="celular"
                   placeholder="Celular"
-                  class="mt-1 block w-full rounded-md shadow-sm p-2 border rounded-md shadow-sm focus:outline-none focus:border-blue-500 text-gray-900"
-                  [ngClass]="{'border-red-500': isInvalid('celular'), 'border-gray-300': !isInvalid('celular')}" />
-            <p *ngIf="pessoaForm.get('celular')?.errors?.['required'] && isInvalid('celular')"
-              class="mt-1 text-xs text-red-600">
-              O número celular é obrigatório.
-            </p>
+                    class="mt-1 block w-full rounded-md shadow-sm p-2 border rounded-md shadow-sm focus:outline-none focus:border-blue-500 text-gray-900"
+                  [ngClass]="{
+                      'border-red-500 focus:border-red-500': pessoaForm.get('celular')?.invalid && (pessoaForm.get('celular')?.touched || pessoaForm.get('celular')?.dirty),
+                      'border-slate-200 focus:ring-blue-500 focus:border-blue-500': !pessoaForm.get('celular')?.invalid || !pessoaForm.get('celular')?.touched
+                    }"
+                  >
+
+                  <div *ngIf="pessoaForm.get('celular')?.invalid && pessoaForm.get('celular')?.dirty" class="text-red-500 text-xs mt-1">
+                    O formato do celular é inválido.
+                  </div>
           </div>
         <!-- WhatsApp -->
           <div>
@@ -241,7 +241,7 @@
                   placeholder="Email"
                   class="mt-1 block w-full rounded-md shadow-sm p-2 border rounded-md shadow-sm focus:outline-none focus:border-blue-500 text-gray-900"
                   [ngClass]="{
-                      'border-red-500 focus:border-red-500': pessoaForm.get('emaikl')?.invalid && (pessoaForm.get('email')?.touched || pessoaForm.get('email')?.dirty),
+                      'border-red-500 focus:border-red-500': pessoaForm.get('email')?.invalid && (pessoaForm.get('email')?.touched || pessoaForm.get('email')?.dirty),
                       'border-slate-200 focus:ring-blue-500 focus:border-blue-500': !pessoaForm.get('email')?.invalid || !pessoaForm.get('email')?.touched
                     }"
                   >
@@ -360,11 +360,11 @@
         </div>
 
    </div>
-  }
+
 
   <!--Perfil de interesse -->
-<div formGroupName="interesse">
-  @if (activeTab === 'interesse') {
+<div formGroupName="interesse" [class.hidden]="activeTab !== 'interesse'">
+
     <div class="tab-pane  pt-0  pr-50">
 
        <fieldset class="mb-30 ">
@@ -559,9 +559,7 @@
               </div>
             </section>
        </div>
-      </fieldset>
-
-        <div class="actions">
+               <div class="actions">
         <button type="button" class="secondary" (click)="switchTab('pessoal')">Voltar</button>
 
         <div class="flex justify-end">
@@ -569,18 +567,21 @@
           <button type="button" class="primary" (click)="switchTab('economico')">Próximo</button>
         </div>
     </div>
+      </fieldset>
+
+
 
       <div class="mt-10 flex justify-end"> </div>
 
     </div>
-   }
+
   </div>
    <!-- Perfil Economico-->
-  <div formGroupName="economico" class="pt-0  pt-0  pr-50">
-   @if (activeTab === 'economico') {
+  <div formGroupName="economico" class="pt-0  pt-0  pr-10" [class.hidden]="activeTab !== 'economico'">
+
     <div class="tab-pane w-full p-0">
 
-      <fieldset class="mb-130 ">
+      <fieldset class="mb-150 ">
         <legend class="text-lg font-semibold text-indigo-700 border-b border-indigo-200 w-full pb-1 mb-6">Dados Economicos</legend>
 
       <div class="flex items-center grid grid-cols-1 md:grid-cols-3 gap-4  ">
@@ -655,28 +656,25 @@
                   class="mt-1 block w-full  border placeholder:text-slate-400  rounded-md shadow-sm p-2  focus:outline-none focus:border-blue-500  text-gray-900"
                    (blur)="formatarValor('economico.recursos_proprios')"/>
           </div>
-
-
-</div>
-
-      </fieldset>
-
-
+      </div>
         <div class="actions">
           <button type="button" class="secondary" (click)="switchTab('interesse')">Voltar</button>
             <button type="submit"
-             [disabled]="pessoaForm.invalid"
+             [disabled]="pessoaForm.invalid || pessoaForm.pending"
+             [style.opacity]="(pessoaForm.invalid || pessoaForm.pending) ? '0.5' : '1'"
               class="primary bg-blue-700 text-white px-4 py-2 rounded"
               [ngClass]="{
-                'bg-blue-600 hover:bg-blue-900 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500': pessoaForm.valid,
-                'bg-gray-400 cursor-not-allowed': pessoaForm.invalid}"
-              class="px-3 py-1 bg-blue-600 text-white rounded" (click)="onSubmit() ">
+                'bg-blue-600 hover:bg-blue-900 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500': pessoaForm.valid || pessoaForm.pending,
+                'bg-gray-400 cursor-not-allowed': pessoaForm.invalid || pessoaForm.pending}"
+              class="px-1 py-1 bg-blue-500 text-white rounded" (click)="onSubmit() ">
               Finalizar Cadastro
          </button>
      </div>
+      </fieldset>
+
 
     </div>
-  }
+
   </div>
     </form>
   </div>
