--- a/src/app/cadastro/cad-pessoa/cad-pessoa/cad-pessoa.scss
+++ b/src/app/cadastro/cad-pessoa/cad-pessoa/cad-pessoa.scss
@@ -99,5 +99,14 @@ input {
   justify-content: space-between;
 }
 
+.hidden {
+  display: none !important;
+}
+
+.active {
+  border-bottom: 2px solid #4f46e5; /* Exemplo de destaque na aba ativa */
+  font-weight: bold;
+}
+
 button.primary { background-color: #007bff; color: white; border: none; padding: 10px 20px; border-radius: 4px; cursor: pointer; }
 button.secondary { background-color: #8b939b; color: white; border: none; padding: 10px 20px; border-radius: 4px; cursor: pointer; }
